syntax = "proto3";

package proto.coupon.v1;

option go_package = "github.com/coxwave/gen/coupon/v1;couponv1";

import "google/protobuf/timestamp.proto";


// 쿠폰 정보
message Coupon {
  uint32 id = 1;                                // 쿠폰 ID (gorm.Model의 ID)
  string code = 2;                              // 쿠폰 코드 (한글+숫자 조합, 10자 이내)
  string campaign_id = 3;                       // 캠페인 ID
  google.protobuf.Timestamp issued_at = 4;      // 발급 시간
  google.protobuf.Timestamp created_at = 5;     // 생성 시간
  google.protobuf.Timestamp updated_at = 6;     // 수정 시간
}

// 쿠폰 발급 요청
message IssueCouponRequest {
  string campaign_id = 1; // 캠페인 ID
}

// 쿠폰 발급 응답
message IssueCouponResponse {
  Coupon coupon = 1;           
}

// 쿠폰 서비스
service CouponService {
  // 쿠폰 발급
  rpc IssueCoupon(IssueCouponRequest) returns (IssueCouponResponse) {}
} 